welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:3: error: not found: value estsurBlanc
} while (estsurBlanc()==true)
         ^